[package]
name = "b2_backup"
version = "0.1.0"
authors = ["Adam Reichold <adam.reichold@t-online.de>"]
license = "GPL-3.0"
repository = "https://github.com/adamreichold/b2_backup"
edition = "2018"
resolver = "2"

[dependencies]
base64 = "0.13"
blake3 = "1.0"
chacha20poly1305 = "0.9"
clap = "2.33"
hex = "0.4"
nix = "0.23"
rayon = "1.2"
ring = "0.16"
rusqlite = { version = "0.25", features = ["bundled", "session"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tempfile = "3.1"
zeptohttpc = { version = "0.5", features = ["tls", "json"] }
zstd = { version = "0.9", default-features = false }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
