[package]
name = "b2_backup"
description = "Incremental backups to Backblaze B2"
version = "0.1.0"
authors = ["Adam Reichold <adam.reichold@t-online.de>"]
license = "GPL-3.0"
repository = "https://github.com/adamreichold/b2_backup"
edition = "2021"
publish = false

[dependencies]
aws-lc-rs = { version = "1.0" }
aws-lc-sys = { version = "0.13", features = ["bindgen"] }
base64 = "0.21"
blake3 = "1.0"
chacha20poly1305 = "0.10"
clap = { version = "4.0", default-features = false, features = ["std", "help", "usage", "cargo"] }
hex = "0.4"
nix = { version = "0.28", default-features = false, features = ["signal", "zerocopy"] }
rayon = "1.2"
rusqlite = { version = "0.31", features = ["bundled", "session"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tempfile = "3.1"
zeptohttpc = { version = "0.10", features = ["tls-native-roots", "json"] }
zstd = { version = "0.13", default-features = false }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = "debuginfo"
